--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,900;1,300;1,400;1,500;1,600;1,700;1,900&display=swap");
 
 @tailwind base;
@@ -16,35 +17,47 @@ html[data-theme="dark"] {
   --foreground: white;
 }
 
-@layer base {
-  main {
-    @apply max-w-sm md:max-w-2xl lg:max-w-4xl;
+@layer components {
+  .container {
+    @apply max-w-7xl;
   }
-  h1 {
-    @apply text-5xl font-bold font-montserrat;
+  .container-wide {
+    @apply max-w-screen-2xl;
   }
-  h2,
-  h3 {
-    @apply text-3xl font-medium font-montserrat;
+  .container-copy {
+    @apply max-w-3xl;
   }
-  h4 {
-    @apply text-xl font-semibold;
+  .container-narrow {
+    @apply max-w-xl;
   }
-  p {
-    @apply text-lg font-sans pb-5;
+  .ultratitle {
+    @apply text-6xl lg:text-7xl xl:text-8xl font-bold;
   }
-  strong {
-    @apply font-semibold;
+  .title {
+    @apply text-5xl lg:text-6xl xl:text-7xl font-bold;
   }
-}
-
-::selection {
-  background: #ff0099;
-  color: black;
-  text-shadow: none;
-}
-::-moz-selection {
-  background: #ff0099;
-  color: #eee;
-  text-shadow: none;
+  .subtitle {
+    @apply mt-3 text-3xl lg:text-4xl;
+  }
+  .headline {
+    @apply text-5xl mt-3 mb-3;
+  }
+  .subheadline {
+    @apply text-3xl mt-0 mb-3;
+  }
+  .eyebrow {
+    @apply text-gray-400 text-4xl lg:text-5xl uppercase mt-0 mb-2;
+  }
+  .lead {
+    @apply text-3xl lg:text-4xl my-2 lg:my-3;
+  }
+  .caption {
+    @apply text-gray-400 font-medium;
+  }
+  .btn {
+    @apply rounded-md bg-blue-300 dark:bg-blue-500 p-2 px-4;
+  }
+  input {
+    @apply bg-gray-300 dark:bg-gray-100 rounded-lg px-3 py-1;
+  }
 }
